# flask_tutorial

./: .gitignore  Dockerfile  README.md  boot.sh  compose-dev.yaml  compose-prodtest.yaml  config.py  fly.toml  manage_dev.py  pyproject.toml  tests.py
docker/dev/: Dockerfile  boot.sh
migrations/versions/: 87d90169e76a_posts_table.py  89862c50019f_new_fields_in_user_model.py  bbdf4f69d2ef_followers.py  e0f19841009a_users_table.py
src/: microblog.py
src/flask_tutorial/: __init__.py  email.py  errors.py  forms.py  models.py  routes.py
src/flask_tutorial/static/: cosmetic_enhancements.js
src/flask_tutorial/templates/: 404.html  _post.html  base.html  edit_profile.html  index.html  login.html  register.html  reset_password.html  reset_password_request.html  user.html
src/flask_tutorial/templates/email/: reset_password.html  reset_password.txt
